Removed JavaFX library dependencies from Maven: Now working with local images